2002-05-11  Christopher Faylor  <cgf@redhat.com>

	* fhandler.h (executable_states): For now, make dont_care_if_executable
	equivalent to not_executable.
	* sys/mount.h: Define MOUNT_NOTEXEC.
	* path.h (fs_info): New class.
	(path_conv): Move fs-specific fields to new 'fs' structure.
	(path_conv::update_fs_info): Move to fs_info and rename to just 'update'.
	* path.cc (fs_info::update): Ditto.  Return 'true' if successful.
	(fillout_mntent): Add ',noexec' to list of reported options.

2002-05-11  Christopher Faylor  <cgf@redhat.com>

	* fhandler_virtual.cc (fhandler_virtual::close): Quiet a compiler
	warning.

2002-05-10  Christopher January <chris@atomice.net>

	* autoload.cc: Add dynamic load statements for
	'ZwQueryInformationProcess' and 'ZwQueryVirtualMemory'.
	* fhandler.h: Change type of bufalloc and filesize members of
	fhandler_virtual from int to size_t.  Change type of position member
	from __off32_t to __off64_t.  Add new fileid member to fhandler_virtual
	class.  Make seekdir take an __off64_t argument.  Make lseek take an
	__off64_t argument.  Add fill_filebuf method to fhandler_virtual.  Add
	fill_filebuf method to fhandler_proc.  Add fill_filebuf method to
	fhandler_registry.  Add fill_filebuf method to fhandler_process.  Add
	saved_pid and saved_p members to fhandler_process.
	* fhandler_proc.cc (proc_listing_array): Add 'loadavg', 'meminfo', and 'stat'.
	(proc_fhandlers array): Ditto.
	(fhandler_proc::open): Use fill_filebuf to flesh out the file contents.
	(fhandler_proc::fill_filebuf): New method.
	(fhandler_proc::format_proc_meminfo): Ditto.
	(fhandler_proc::format_proc_stat): Ditto.
	(fhandler_proc::format_proc_uptime): Ditto.
	* fhandler_process.cc (process_listing): Add 'stat' and 'statm'.
	(fhandler_process::fstat): Find the _pinfo structure for the process
	named in the filename.  Return ENOENT if the process is no longer
	around.  Set the gid and uid fields of the stat structure.